[metadata]
name = mitesh
version = 0.0.19
author = Mitesh Singh Jat
author_email = mitesh.singh.jat@gmail.com
description = Modestly Integrated To Every SHell
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miteshbsjat/mitesh
project_urls =
    Bug Tracker = https://github.com/miteshbsjat/mitesh/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
